<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/documents"
        android:src="@drawable/closeupofopenbook"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/intro_helloagain_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/intro_helloagain"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"
        android:autoLink="email"
        android:textAlignment="center"
        android:text="@string/intro_email"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_ok_hello_again"
        style="@style/btnBgLightBlue"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:text="@string/okok" />

</LinearLayout>