<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/choose"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_full_restore"
            android:layout_marginTop="25dp"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:text="@string/full_restore"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_part_restore"
            android:layout_marginTop="25dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/partial_restore"/>
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/confirm_restore"
        android:layout_gravity="center_horizontal"
        style="@style/btnBgLightBlue"
        android:text="@string/okok" />

</LinearLayout>