<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/treat_explain"/>
    <include
        android:id="@+id/element_add"
        layout="@layout/element_add_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/treat_clear"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_btn_nobg_palegreen_thin"
            android:text="@string/clearclear"/>

        <Button
            android:id="@+id/treat_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_btn_bg_blue"
            android:text="@string/savesave" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/treat_past"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/treat_no_history"
        android:text="@string/treat_past_none"/>
    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:childDivider="@color/disabled_bg"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp" />


</LinearLayout>
</ScrollView>